fix logo spacing and movement, clean up html

--- a/style.scss
+++ b/style.scss
@@ -85,7 +85,12 @@ body {
 }
 
 .logo {
-	width: 50%;
+	width: 700px;
+	@media (max-width: 700px) {
+		width: 80%
+	}
+	margin: 30px;
+	display: block;
 }
 
 .highlight {	
